--- a/Spring/app/src/main/res/layout/activity_bulb.xml
+++ b/Spring/app/src/main/res/layout/activity_bulb.xml
@@ -22,4 +22,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/bulbImageView"
         android:layout_marginTop="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/price"/>
 </LinearLayout>
