--- a/Project3/Cars_1/app/src/main/res/layout/activity_add_car.xml
+++ b/Project3/Cars_1/app/src/main/res/layout/activity_add_car.xml
@@ -57,4 +57,15 @@
         android:layout_below="@+id/editText4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="128dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText5"
+        android:hint="Horsepower"
+        android:textAlignment="center"
+        android:layout_below="@+id/editText4"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/editText4" />
+
 </RelativeLayout>
