--- a/Project3/Cars_1/app/src/main/res/layout/activity_car_detail.xml
+++ b/Project3/Cars_1/app/src/main/res/layout/activity_car_detail.xml
@@ -9,17 +9,51 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.michael.cars.carDetailActivity">
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textAlignment="center"
         android:id="@+id/car_name"
-        android:layout_gravity="center_horizontal" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:textAlignment="center"
+        android:textSize="35dp"
+        android:textColor="#000000" />
 
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/carImageView"
-        android:layout_marginTop="20dp"/>
+        android:id="@+id/car_year"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:layout_below="@+id/car_name"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="40dp"
+        android:layout_alignEnd="@+id/car_name"
+        android:textColor="#000000" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/car_price"
+        android:layout_below="@+id/car_year"
+        android:layout_marginTop="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/car_year"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:textColor="#000000" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/car_hp"
+        android:layout_below="@+id/car_price"
+        android:layout_marginTop="53dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/car_price"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:textColor="#000000" />
 </RelativeLayout>
