--- a/Project3/Cars_1/app/src/main/res/layout/activity_main.xml
+++ b/Project3/Cars_1/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,6 @@
         android:layout_width="wrap_content"
         android:layout_height="290dp"
         android:id="@+id/listView"
-        android:entries="@array/cars"
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true" />
 
@@ -35,7 +34,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:onClick="addCar"/>
+        android:onClick="addCarView"/>
 
 
 </LinearLayout>
